--- a/notebooks/clean_data.ipynb
+++ b/notebooks/clean_data.ipynb
@@ -26,6 +26,7 @@
    "outputs": [],
    "source": [
     "df=pd.read_csv(\"../data/Wilson_disease_dataset.csv\")\n",
+    "df.drop(columns=['Socioeconomic Status'], inplace=True, errors=\"ignore\")\n",
     "df.drop(columns=['Name','Region'],inplace=True)\n",
     "df.drop(columns=[\"ATB7B Gene Mutation\"], inplace=True, errors=\"ignore\")\n",
     "df.drop(columns=[\"Kayser-Fleischer Rings\"], inplace=True, errors=\"ignore\")\n",
@@ -42,7 +43,7 @@
    "outputs": [],
    "source": [
     "df=pd.read_csv(\"../data/Wilson_disease_dataset.csv\")\n",
-    "columns=['Sex','Socioeconomic Status','Alcohol Use']\n",
+    "columns=['Sex','Alcohol Use']\n",
     "df=pd.get_dummies(data=df,prefix=columns,columns=columns)\n",
     "df.to_csv(\"../data/Wilson_disease_dataset.csv\",index=False)\n",
     "print(df.head())"
